--- a/index.html
+++ b/index.html
@@ -14,30 +14,28 @@
   <div class="container">
 
     <section id="story0">
-      <div class="section-content align-middle">
-        <div class="typewriter"></div>
-        <!-- <h1 class="fw-bolder fade-show">In 2006, Laura Bush said that America was going to Afghanistan to fight</h1> -->
-        <!-- <h1 class="my-5 fade-show"><em> "the brutal oppression of women"</em></h1> -->
-        <!-- <h3 class="text-secondary lh-lg fade-show">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3> -->
+      <div class="section-content">
+        <h1 class="fw-bolder">In 2006, Laura Bush said that America was going to Afghanistan to fight <em>"the brutal oppression of women"</em></h1>
+        <h3 class="text-secondary lh-lg">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3>
       </div>
     </section>
     
     <section id="story1">
-      <div class="section-content align-middle invisible">
-        <h1 class="fw-bolder">We won some major victories against the Taliban, and even established democracy in Afghanistan. Its women thanked us for helping them feel safe.</h1>
-        <h3 class="text-secondary lh-lg">Our own women were playing a greater role within the armed forces, and we <a href="#" id="for-story-2" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried again</a>to reduce sexual assaults in our own military. But it <a href="#" id="for-story-2" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">still didn't</a> seem to work</h3>
+      <div class="section-content">
+        <h1 class="fw-bolder">We defeated the Taliban, established democracy, and helped Afghanistan's women feel safer. </h1>
+        <h3 class="text-secondary lh-lg">We defeated the Taliban, established democracy, and helped Afghanistan's women feel safer. </h3>
       </div>
     </section>
 
     <section id="story2">
-      <div class="section-content align-middle invisible">
-        <h1 class="fw-bolder">We struggled to keep the peace, and Afghanistan slowly descended into chaos. As assaults against Afghan women continued to rise, </h1>
-        <h3 class="text-secondary lh-lg">we<a href="#" id="for-story-3" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">kept pretending</a> to stymie sexual assaults in our own military. But, clearly, we <a href="#" id="for-story-3" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">weren't doing enough</a> tofor women, whether in Afghanistan or in our armed forces.</h3>
+      <div class="section-content">
+        <h1 class="fw-bolder">Women were playing a greater role within our armed forces, and we tried again to reduce sexual assaults in our own military. But it still didn't seem to work.</h1>
+        <h3 class="text-secondary lh-lg">Ultimately, though, the war severely worsened Afghan women's lives. While we were busy pretending to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. It didn't work at all.</h3>
       </div>
     </section>
 
     <section id="story3">
-      <div class="section-content align-middle invisible">
+      <div class="section-content">
         <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
         <div class="container-fluid mx-auto">
           <h4 class="navbar-brand" href="#">View Timeline</h4>
@@ -49,18 +47,14 @@
 
   <!-- dialogs -->
   <div id="dialog-story0" class="dialog-wrapper invisible positive-story">
-    <!-- <header>Story 0</header> -->
     <div class="content">
-      <!-- <div class="title">Draggable Div</div> -->
       <p>Beth was a logistics officer volunteerly deployed in Afghanisthan on a female engagement team (FET). Her position as a woman within the Green Barrett team was "an invaluable tool" when it came to collecting information from Afghan women about sympathetic residents.</p>
       <span class="year">2008</span>
     </div>
   </div>
 
   <div id="dialog-story1" class="invisible dialog-wrapper positive-story">
-    <!-- <header>Draggable Div 2</header> -->
     <div class="content">
-      <!-- <div class="title">Draggable Div</div> -->
       <p>However, the reforms did not extend to PTSD claims in which the cause of PTSD is sexual assault.</p>
       <p>When Edith finally did seek mental health services at the VA, the clinician did not believe that she had been in the sort of combat she described. </p>
       <span class="year">2008</span>
@@ -68,9 +62,7 @@
   </div>
   
   <div id="dialog-story2" class="invisible dialog-wrapper negative-story">
-    <!-- <header>Another story (2)</header> -->
     <div class="content">
-      <!-- <div class="title">Draggable Div</div> -->
       <p>This is a draggable div which is created using HTML CSS & JavaScript. You can move this div anywhere on the document or page.</p>
     </div>
   </div>
