typed effect and timing of the story popups

--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
 
     <section id="story0">
       <div class="section-content">
-        <h1 class="fw-bolder">In 2006, Laura Bush said that America was going to Afghanistan to fight <em>"the brutal oppression of women"</em></h1>
-        <h3 class="text-secondary lh-lg">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3>
+        <!-- <h1 class="fw-bolder">In 2006, Laura Bush said that America was going to Afghanistan to fight <em>"the brutal oppression of women"</em></h1> -->
+        <!-- <h3 class="text-secondary lh-lg">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also<a href="#" id="for-story-1" class="text-white text-bg-success p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#positive">tried</a> to reduce sexual assaults in our own military, even if it <a href="#" id="for-story-1" class="text-white text-bg-danger p-1 trigger-modal" data-bs-toggle="modal" data-bs-target="#negative">didn't</a> succeed at the start.</h3> -->
       </div>
     </section>
     
     <section id="story1">
       <div class="section-content">
-        <h1 class="fw-bolder">We defeated the Taliban, established democracy, and helped Afghanistan's women feel safer. </h1>
-        <h3 class="text-secondary lh-lg">We defeated the Taliban, established democracy, and helped Afghanistan's women feel safer. </h3>
+        <!-- <h1 class="fw-bolder">We defeated the Taliban, established democracy, and helped Afghanistan's women feel safer. </h1> -->
+        <!-- <h3 class="text-secondary lh-lg">We defeated the Taliban, established democracy, and helped Afghanistan's women feel safer. </h3> -->
       </div>
     </section>
 
@@ -46,14 +46,14 @@
   </div>
 
   <!-- dialogs -->
-  <div id="dialog-story0" class="dialog-wrapper invisible positive-story">
+  <div id="dialog-story0" class="invisible dialog-wrapper positive-story">
     <div class="content">
       <p>Beth was a logistics officer volunteerly deployed in Afghanisthan on a female engagement team (FET). Her position as a woman within the Green Barrett team was "an invaluable tool" when it came to collecting information from Afghan women about sympathetic residents.</p>
       <span class="year">2008</span>
     </div>
   </div>
 
-  <div id="dialog-story1" class="invisible dialog-wrapper positive-story">
+  <div id="dialog-story1" class="invisible dialog-wrapper negative-story">
     <div class="content">
       <p>However, the reforms did not extend to PTSD claims in which the cause of PTSD is sexual assault.</p>
       <p>When Edith finally did seek mental health services at the VA, the clinician did not believe that she had been in the sort of combat she described. </p>
