--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <section id="story1">
       <div class="section-content"><!-- content from js --></div>
       <article>
-        <div id="dialog-story2" class="invisible dialog-wrapper negative-story">
+        <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
           <div class="content">
             <p>....</p>
             <span class="year">2008</span>
@@ -68,7 +68,7 @@
     
         <div id="dialog-story6" class="invisible dialog-wrapper positive-story">
           <div class="content">
-            <p>The 2010 reforms opened access for veterans (like Edith) who were otherwise denied healthcare, now to be able to make a connection by allowing deployment to a combat zone in any capacity—not just combat roles—to serve in place of what was before a requirement to prove a specific "event" caused one's PTSD.</p>
+            <p>The 2010 reforms opened access for veterans (like Edith) who were otherwise denied healthcare, now to be able to make a connection by allowing deployment to a combat zone in any capacity not just combat roles to serve in place of what was before a requirement to prove a specific "event" caused one's PTSD.</p>
             <span class="year">2010</span>
           </div>
         </div>
