linear progression - no sections

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <div class="container">
 
     <section id="story0">
-      <div class="section-content"><!-- content from js --></div>
+      <div class="section-content invisible"><!-- content from js --></div>
+      <a class="invisible" id="for-1">Read more...</a>
       <article>
         <!-- dialogs -->
         <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
@@ -34,7 +35,8 @@
     </section>
     
     <section id="story1">
-      <div class="section-content"><!-- content from js --></div>
+      <div class="section-content invisible"><!-- content from js --></div>
+      <a class="invisible" id="for-2">Read more...</a>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
           <div class="content">
@@ -91,7 +93,8 @@
     </section>
 
     <section id="story2">
-      <div class="section-content"><!-- content from js --></div>
+      <div class="section-content invisible"><!-- content from js --></div>
+      <a class="invisible" id="for-3">Read more...</a>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
           <div class="content">
@@ -167,7 +170,7 @@
     </section>
 
     <section id="story3">
-      <div class="section-content">
+      <div class="section-content invisible">
         <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
         <div class="container-fluid mx-auto">
           <h4 class="navbar-brand" href="#">View Timeline</h4>
