--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="story0">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-1">Read more...</a>
+      <a class="invisible" id="for-1">Continue...</a>
       <article>
         <!-- dialogs -->
         <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
@@ -94,7 +94,7 @@
 
     <section id="story2">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-3">Read more...</a>
+      <a class="invisible" id="for-3">and...</a>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
           <div class="content">
