--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <!-- dialogs -->
         <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
           <div class="content">
+            <!-- <span class="expand-collapse"> - </span> -->
             <p>The invasion of Afghanistan was justified in the name of women's rights - Laura Bush in her statement, "the brutal oppression of women," calling this oppression "a central goal of the terrorists" with whom the United States was now at war.</p>
             <span class="year">2008</span>
           </div>
