--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section id="story0">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-1">Continue...</a>
+      <a class="invisible" id="for-1">Keep reading:</a>
       <article>
         <!-- dialogs -->
         <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
@@ -37,7 +37,7 @@
     
     <section id="story1">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-2">Read more...</a>
+      <a class="invisible" id="for-2">Keep reading:</a>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
           <div class="content">
@@ -95,7 +95,7 @@
 
     <section id="story2">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-3">and...</a>
+      <a class="invisible" id="for-3">Keep reading:</a>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
           <div class="content">
