rename tag: .containerrr -> .container

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <div class="containerrr">
+  <div class="container">
 
     <section id="story0">
       <div class="section-content invisible"><!-- content from js --></div>
