html: apply .m to all "keep reading" tags

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="story0">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-1">Keep reading:</a>
+      <a class="invisible" id="for-1" class="m">Keep reading:</a>
       <article>
         <!-- dialogs -->
         <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
@@ -35,7 +35,7 @@
     
     <section id="story1">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-2">Keep reading:</a>
+      <a class="invisible" id="for-2" class="m">Keep reading:</a>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
           <div class="content">
@@ -93,7 +93,7 @@
 
     <section id="story2">
       <div class="section-content invisible"><!-- content from js --></div>
-      <a class="invisible" id="for-3">Keep reading:</a>
+      <a class="invisible" id="for-3" class="m">Keep reading:</a>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
           <div class="content">
