visibility on the parent directly.. also zooms-in to stories associated to the link (wip)

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <div class="container">
 
-    <section id="story0">
-      <div class="section-content invisible"><!-- content from js --></div>
+    <section id="story0" class="invisible">
+      <div class="section-content"><!-- content from js --></div>
       <h1><a class="m invisible" id="for-1">Keep reading:</a></h1>
       <article>
         <!-- dialogs -->
@@ -33,8 +33,8 @@
       </article>
     </section>
     
-    <section id="story1">
-      <div class="section-content invisible"><!-- content from js --></div>
+    <section id="story1" class="invisible">
+      <div class="section-content"><!-- content from js --></div>
       <h1><a class="m invisible" id="for-2">Keep reading:</a></h1>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
@@ -91,8 +91,8 @@
       </article>
     </section>
 
-    <section id="story2">
-      <div class="section-content invisible"><!-- content from js --></div>
+    <section id="story2" class="invisible">
+      <div class="section-content"><!-- content from js --></div>
       <h1><a class="m invisible" id="for-3">Keep reading:</a></h1>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
@@ -168,8 +168,8 @@
       </article>
     </section>
 
-    <section id="story3">
-      <div class="section-content invisible">
+    <section id="story3" class="invisible">
+      <div class="section-content">
         <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
         <div class="container-fluid mx-auto">
           <h4 class="navbar-brand" href="#">View Timeline</h4>
