removed dynamic text insertion, now reading from html and adding typewriter effect

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
   <div class="container">
 
     <section id="story0" class="invisible">
-      <div class="section-content"><!-- content from js --></div>
+      <div class="section-content">
+        <h1>In 2006, Laura Bush said that America was going to Afghanistan to fight "the brutal oppression of women".
+          <span class="text-secondary">While we were busy fighting sexual oppression (among other things) in Afghanistan, we also
+            <a data-dialogs="0" class="p link-for-section">tried</a> to reduce sexual assaults in our own military, even if it
+            <a data-dialogs="1" class="n link-for-section">didn't</a> succeed at the start.
+          </span>
+        </h1>
+      </div>
       <h1><a class="m invisible" id="for-1">Keep reading:</a></h1>
       <article>
         <!-- dialogs -->
@@ -34,7 +41,16 @@
     </section>
     
     <section id="story1" class="invisible">
-      <div class="section-content"><!-- content from js --></div>
+      <div class="section-content">
+        <h1>We defeated the Taliban, established democracy, and helped
+          <a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a> women feel safer. Women were playing a greater role within our armed forces, and we tried again to reduce sexual assaults in our own military. But it still didn\'t seem to work.
+        </h1>
+        <h1 class="text-secondary">Women were playing a
+          <a data-dialogs="4 5" class="p link-for-section">greater role</a> within our armed forces, and we
+          <a data-dialogs="6" class="p link-for-section">tried again</a> to reduce sexual assaults in our own military. But it
+          <a data-dialogs="7" class="n link-for-section">still didn't</a> seem to work.
+        </h1>
+      </div>
       <h1><a class="m invisible" id="for-2">Keep reading:</a></h1>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
@@ -92,7 +108,15 @@
     </section>
 
     <section id="story2" class="invisible">
-      <div class="section-content"><!-- content from js --></div>
+      <div class="section-content">
+        <h1>Ultimately, though, the war severely
+          <a data-dialogs="9 10 11 12 13 14" class="n link-for-section">worsened</a> Afghan women's lives.
+        </h1>
+        <h1 class="text-secondary">While we were busy
+          <a data-dialogs="15" class="p link-for-section">pretending</a> to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. It
+          <a data-dialogs="16 17" class="n link-for-section">didn't work</a> at all.
+        </h1>
+      </div>
       <h1><a class="m invisible" id="for-3">Keep reading:</a></h1>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
