breath-able buttons (styling can be changed) + audio player on article dialog (but no autoplay)

--- a/index.html
+++ b/index.html
@@ -55,9 +55,10 @@
       <h1><a class="m invisible" id="for-2">Keep reading:</a></h1>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
+          <header>Play audio</header>
           <div class="content">
             <a class="expand-collapse"> X </a>
-            <p>....</p>
+            <p></p>
             <span class="year">2008</span>
           </div>
         </div>
@@ -67,7 +68,13 @@
           <div class="content">
             <a class="expand-collapse"> X </a>
             <div class="title">News article</div>
-            <p>....</p>
+            <p>
+              <figure>
+                <figcaption>Listen to Laura Bush's speech excerpt:</figcaption>
+                <audio controls src="trimmed_laura_bush_brown_uni.mp3"></audio>
+                <!-- <a href="trimmed_laura_bush_brown_uni.mp3"> Download audio </a> -->
+              </figure>
+            </p>
             <span class="year">2008</span>
           </div>
         </div>
