example video embedded on article dialog

--- a/index.html
+++ b/index.html
@@ -55,19 +55,21 @@
       <h1><a class="m invisible" id="for-2">Keep reading:</a></h1>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
-          <header>Play audio</header>
+          <header>Interview</header>
           <div class="content">
             <a class="expand-collapse"> X </a>
-            <p></p>
+            <p>
+              <iframe width="100%" src="https://www.youtube.com/embed/fUmP281en24?si=Z9DHz3ivvEc8dfYF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"></iframe>
+            </p>
             <span class="year">2008</span>
           </div>
         </div>
     
         <div id="dialog-story3" class="invisible dialog-wrapper neutral-story">
-          <header>News article</header>
+          <header>Laura bush addresses citizens on the radio</header>
           <div class="content">
             <a class="expand-collapse"> X </a>
-            <div class="title">News article</div>
+            <!-- <div class="title">News article</div> -->
             <p>
               <figure>
                 <figcaption>Listen to Laura Bush's speech excerpt:</figcaption>
@@ -75,7 +77,7 @@
                 <!-- <a href="trimmed_laura_bush_brown_uni.mp3"> Download audio </a> -->
               </figure>
             </p>
-            <span class="year">2008</span>
+            <span class="year">2001</span>
           </div>
         </div>
     
