--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <section id="story1" class="invisible">
       <div class="section-content">
         <h1>We defeated the Taliban, established democracy, and helped
-          <a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a> women feel safer. Women were playing a greater role within our armed forces, and we tried again to reduce sexual assaults in our own military. But it still didn\'t seem to work.
+          <a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a> women feel safer. Women were playing a greater role within our armed forces, and we tried again to reduce sexual assaults in our own military. But it still didn't seem to work.
         </h1>
         <h1 class="text-secondary">Women were playing a
           <a data-dialogs="4 5" class="p link-for-section">greater role</a> within our armed forces, and we
