--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <section id="story0" class="invisible">
       <div class="section-content">
-        <h1>
+        <p>
           <span class="text-contextnews">
             In 2006, Laura Bush said that America was going to Afghanistan to fight "the brutal oppression of women".
           </span>
@@ -28,9 +28,9 @@
             </a>
             succeed at the start.
           </span>
-        </h1>
+        </p>
       </div>
-      <h1><a class="m invisible" id="for-1">Keep reading:</a></h1>
+      <p><a class="m invisible" id="for-1">Keep reading:</a></p>
       <article>
         <!-- dialogs -->
         <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
@@ -53,7 +53,7 @@
     
     <section id="story1" class="invisible">
       <div class="section-content">
-        <h1>
+        <p>
           <span class="text-contextnews">
             We defeated the Taliban, established democracy, and helped
             <a data-dialogs="2 3" class="e link-for-section">
@@ -76,9 +76,9 @@
             </a>
             seem to work.
           </span>
-        </h1>
+        </p>
       </div>
-      <h1><a class="m invisible" id="for-2">Keep reading:</a></h1>
+      <p><a class="m invisible" id="for-2">Keep reading:</a></p>
       <article>
         <div id="dialog-story2" class="invisible dialog-wrapper neutral-story">
           <header>Interview</header>
@@ -152,7 +152,7 @@
 
     <section id="story2" class="invisible">
       <div class="section-content">
-        <h1>
+        <p>
           <span class="text-contextnews">
             Ultimately, though, the war severely
             <a data-dialogs="9 10 11 12 13 14" class="n link-for-section">
@@ -172,9 +172,9 @@
             </a>
             at all.
           </span>
-        </h1>
+        </p>
       </div>
-      <h1><a class="m invisible" id="for-3">Keep reading:</a></h1>
+      <p><a class="m invisible" id="for-3">Keep reading:</a></p>
       <article>
         <div id="dialog-story9" class="invisible dialog-wrapper neutral-story">
           <div class="content">
@@ -261,7 +261,7 @@
 
     <section id="story3" class="invisible">
       <div class="section-content">
-        <h1>Can we help women elsewhere in the world if we don't pay attention to our own?</h1>
+        <p>Can we help women elsewhere in the world if we don't pay attention to our own?</p>
         <div class="container-fluid mx-auto">
           <h4 class="navbar-brand" href="#">View Timeline</h4>
           <h4 class="navbar-brand" href="#">Read Full Paper</h4>
