format link text
this prevents unwanted spaces from appearing in rendered links.

--- a/index.html
+++ b/index.html
@@ -19,13 +19,9 @@
           </span>
           <span class="text-secondary">
             While we were busy fighting sexual oppression (among other things) in Afghanistan, we also
-            <a data-dialogs="0" class="p link-for-section">
-              tried
-            </a> 
+            <a data-dialogs="0" class="p link-for-section">tried</a>
             to reduce sexual assaults in our own military, even if it
-            <a data-dialogs="1" class="n link-for-section">
-              didn't
-            </a>
+            <a data-dialogs="1" class="n link-for-section">didn't</a>
             succeed at the start.
           </span>
         </p>
@@ -56,24 +52,16 @@
         <p>
           <span class="text-contextnews">
             We defeated the Taliban, established democracy, and helped
-            <a data-dialogs="2 3" class="e link-for-section">
-              Afghanistan's
-            </a>
+            <a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a>
             women feel safer.
           </span> 
           <span class="text-secondary">
             Women were playing a
-            <a data-dialogs="4 5" class="p link-for-section">
-              greater role
-            </a> 
+            <a data-dialogs="4 5" class="p link-for-section">greater role</a> 
             within our armed forces, and we
-            <a data-dialogs="6" class="p link-for-section">
-              tried again
-            </a> 
+            <a data-dialogs="6" class="p link-for-section">tried again</a> 
             to reduce sexual assaults in our own military. But it
-            <a data-dialogs="7" class="n link-for-section">
-              still didn't
-            </a>
+            <a data-dialogs="7" class="n link-for-section">still didn't</a>
             seem to work.
           </span>
         </p>
@@ -155,21 +143,15 @@
         <p>
           <span class="text-contextnews">
             Ultimately, though, the war severely
-            <a data-dialogs="9 10 11 12 13 14" class="n link-for-section">
-              worsened
-            </a> 
+            <a data-dialogs="9 10 11 12 13 14" class="n link-for-section">worsened</a> 
             Afghan women's lives.
           </span>
           <span class="text-secondary">
             While we were busy
-            <a data-dialogs="15" class="p link-for-section">
-              pretending
-            </a> 
+            <a data-dialogs="15" class="p link-for-section">pretending</a> 
             to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. 
             It
-            <a data-dialogs="16 17" class="n link-for-section">
-              didn't work
-            </a>
+            <a data-dialogs="16 17" class="n link-for-section">didn't work</a>
             at all.
           </span>
         </p>
