dialog position parameter changes

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
   <div class="container">
 
+    <!-- dialog stories -->
     <article>
       <!-- For story0 -->
       <div id="dialog-story0" class="invisible dialog-wrapper neutral-story">
