--- a/index.html
+++ b/index.html
@@ -32,16 +32,8 @@
       </article>
 
       <div class="section-content">
-        <span>
-          In 2006, Laura Bush <a data-dialogs="0" class="e link-for-section">said</a> that America was going to Afghanistan to fight "the brutal oppression of women".
-        </span>
-        <span>
-          While we were busy fighting sexual oppression (among other things) in Afghanistan, we also
-          <a data-dialogs="0" class="p link-for-section">tried</a>
-          to reduce sexual assaults in our own military, even if it
-          <a data-dialogs="1" class="n link-for-section">didn't</a>
-          succeed at the start.
-        </span>
+        <span>In 2006, Laura Bush <a data-dialogs="0" class="e link-for-section">said</a> that America was going to Afghanistan to fight "the brutal oppression of women".</span>
+        <span>While we were busy fighting sexual oppression (among other things) in Afghanistan, we also <a data-dialogs="0" class="p link-for-section">tried</a>to reduce sexual assaults in our own military, even if it <a data-dialogs="1" class="n link-for-section">didn't</a> succeed at the start.</span>
       </div>
       <p><a class="m invisible" id="for-1">Keep reading:</a></p>
     </section>
@@ -117,20 +109,8 @@
         </div>
       </article>
       <div class="section-content">
-        <span>
-          We defeated the Taliban, established democracy, and helped
-          <a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a>
-          women feel safer.
-        </span> 
-        <span>
-          Women were playing a
-          <a data-dialogs="4 5" class="p link-for-section">greater role</a> 
-          within our armed forces, and we
-          <a data-dialogs="6" class="p link-for-section">tried again</a> 
-          to reduce sexual assaults in our own military. But it
-          <a data-dialogs="7" class="n link-for-section">still didn't</a>
-          seem to work.
-        </span>
+        <span>We defeated the Taliban, established democracy, and helped<a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a>women feel safer.</span> 
+        <span>Women were playing a<a data-dialogs="4 5" class="p link-for-section">greater role</a> within our armed forces, and we<a data-dialogs="6" class="p link-for-section">tried again</a> to reduce sexual assaults in our own military. But it<a data-dialogs="7" class="n link-for-section">still didn't</a>seem to work.</span>
       </div>
       <p><a class="m invisible" id="for-2">Keep reading:</a></p>
     </section>
@@ -219,19 +199,8 @@
         </div>
       </article>
       <div class="section-content">
-        <span>
-          Ultimately, though, the war severely
-          <a data-dialogs="9 10 11 12 13 14" class="n link-for-section">worsened</a> 
-          Afghan women's lives.
-        </span>
-        <span>
-          While we were busy
-          <a data-dialogs="15" class="p link-for-section">pretending</a> 
-          to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. 
-          It
-          <a data-dialogs="16 17" class="n link-for-section">didn't work</a>
-          at all.
-        </span>
+        <span>Ultimately, though, the war severely<a data-dialogs="9 10 11 12 13 14" class="n link-for-section">worsened</a> Afghan women's lives.</span>
+        <span>While we were busy<a data-dialogs="15" class="p link-for-section">pretending</a> to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. It<a data-dialogs="16 17" class="n link-for-section">didn't work</a>at all.</span>
       </div>
       <p><a class="m invisible" id="for-3">Keep reading:</a></p>
     </section>
