opening drawer when clicking on the story link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="container">
 
-    <button id="openDrawer">Open Drawer</button>
+    <!-- <button id="openDrawer">Open Drawer</button> -->
 
     <div class="drawer" id="drawer">
       <div class="drawer-head">
