--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <div class="drawer-head">
         <span class="title">Drawer Title</span>
         <span class="status"><!-- ; --></span>
-        <span class="nav"><span class="nxt">&lt;</span>  <span class="prev">&gt;</span></span>
+        <span class="nav"><span class="prev">&lt;</span>  <span class="nxt">&gt;</span></span>
       </div>
       <div class="drawer-content">
         <!-- loaded dynamically -->
