minor ui changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <div class="drawer" id="drawer">
       <div class="drawer-head">
-        <span class="title">Drawer Title</span>
+        <span class="title"></span>
         <span class="status"><!-- ; --></span>
         <span class="nav"><span class="prev">&lt;</span>  <span class="nxt">&gt;</span></span>
       </div>
@@ -23,7 +23,7 @@
         <!-- loaded dynamically -->
       </div>
       <div class="drawer-foot">
-        <button id='closeDrawer'>Close Drawer</button>
+        <button id='closeDrawer'>Close</button>
       </div>
     </div>
 
