--- a/index.html
+++ b/index.html
@@ -23,30 +23,30 @@
         <!-- loaded dynamically -->
       </div>
       <div class="drawer-foot">
-        <button id='closeDrawer'>Close</button>
+        <button id='close_drawer'>Close</button>
       </div>
     </div>
 
     <section id="story0" class="invisible">
       <div class="section-content">
-        <span>In 2006, Laura Bush <a data-dialogs="0" class="e link-for-section">said</a> that America was going to Afghanistan to fight "the brutal oppression of women".</span>
-        <span>While we were busy fighting sexual oppression (among other things) in Afghanistan, we also <a data-dialogs="0" class="p link-for-section">tried</a>to reduce sexual assaults in our own military, even if it <a data-dialogs="1" class="n link-for-section">didn't</a> succeed at the start.</span>
+        <span>In 2006, Laura Bush <a data-dialogs="0" class="e link-for-section">said<sub>1</sub></a> that America was going to Afghanistan to fight "the brutal oppression of women".</span>
+        <span>While we were busy fighting sexual oppression (among other things) in Afghanistan, we also <a data-dialogs="0" class="p link-for-section">tried <sub>1</sub></a>to reduce sexual assaults in our own military, even if it <a data-dialogs="1" class="n link-for-section">didn't<sub>1</sub></a> succeed at the start.</span>
       </div>
       <p><a class="m invisible" id="for-1">Keep reading:</a></p>
     </section>
     
     <section id="story1" class="invisible">
       <div class="section-content">
-        <span>We defeated the Taliban, established democracy, and helped<a data-dialogs="2 3" class="e link-for-section">Afghanistan's</a>women feel safer.</span> 
-        <span>Women were playing a<a data-dialogs="4 5" class="p link-for-section">greater role</a> within our armed forces, and we <a data-dialogs="6" class="p link-for-section">tried again</a> to reduce sexual assaults in our own military. But it<a data-dialogs="7" class="n link-for-section">still didn't</a>seem to work.</span>
+        <span>We defeated the Taliban, established democracy, and helped<a data-dialogs="2 3" class="e link-for-section">Afghanistan's<sub>2</sub></a>women feel safer.</span> 
+        <span>Women were playing a<a data-dialogs="4 5" class="p link-for-section">greater role<sub>2</sub></a> within our armed forces, and we <a data-dialogs="6" class="p link-for-section">tried again<sub>1</sub></a> to reduce sexual assaults in our own military. But it<a data-dialogs="7" class="n link-for-section">still didn't<sub>1</sub></a>seem to work.</span>
       </div>
       <p><a class="m invisible" id="for-2">Keep reading:</a></p>
     </section>
 
     <section id="story2" class="invisible">
       <div class="section-content">
-        <span>Ultimately, though, the war severely<a data-dialogs="9 10 11 12 13 14" class="n link-for-section">worsened</a> Afghan women's lives.</span>
-        <span>While we were busy<a data-dialogs="15" class="p link-for-section">pretending</a> to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. It<a data-dialogs="16 17" class="n link-for-section">didn't work</a>at all.</span>
+        <span>Ultimately, though, the war severely<a data-dialogs="9 10 11 12 13 14" class="n link-for-section">worsened<sub>6</sub></a> Afghan women's lives.</span>
+        <span>While we were busy<a data-dialogs="15" class="p link-for-section">pretending<sub>1</sub></a> to help Afghanistan, we kept pretending to reduce sexual assaults in our own military. It<a data-dialogs="16 17" class="n link-for-section">didn't work<sub>2</sub></a>at all.</span>
       </div>
       <p><a class="m invisible" id="for-3">Keep reading:</a></p>
     </section>
