--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
     <!-- <button id="openDrawer">Open Drawer</button> -->
 
     <div class="drawer" id="drawer">
-      <div class="drawer-head">
+      <span class="drawer-x">X</span>
+      <!-- <div class="drawer-head">
         <span class="title"></span>
-        <span class="status"><!-- ; --></span>
+        <span class="status"></span>
         <span class="nav"><span class="prev">&lt;</span>  <span class="nxt">&gt;</span></span>
-      </div>
+      </div> -->
       <div class="drawer-content">
         <!-- loaded dynamically -->
       </div>
