--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Brown Uni</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="stylesheet" type="text/css" href="style.css">
+  <link rel="stylesheet" type="text/css" href="assets/style.css">
 </head>
 
 <body>
